[gd_scene load_steps=15 format=2]

[ext_resource path="res://battle/Battle.gd" type="Script" id=1]
[ext_resource path="res://battle/scenery_1.png" type="Texture" id=2]
[ext_resource path="res://modifiers/ModifiersContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://enemies/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://enemies/Slime.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemies/Bats.tscn" type="PackedScene" id=6]
[ext_resource path="res://battle/under_large.png" type="Texture" id=7]
[ext_resource path="res://battle/progress_large.png" type="Texture" id=8]
[ext_resource path="res://dynamic_font.tres" type="DynamicFont" id=9]
[ext_resource path="res://ui/Button.tscn" type="PackedScene" id=10]
[ext_resource path="res://enemies/Insect.tscn" type="PackedScene" id=11]

[sub_resource type="Animation" id=1]

resource_name = "fade_out"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "invisible"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "visible"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ) ]
}

[node name="Battle" type="Node2D" index="0" groups=[
"battle",
]]

script = ExtResource( 1 )

[node name="scenery_1" type="Sprite" parent="." index="0"]

position = Vector2( 480, 270 )
z_index = -1024
texture = ExtResource( 2 )
_sections_unfolded = [ "Z Index" ]

[node name="ModifiersContainer" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 216, 267 )

[node name="CardsStart" type="Position2D" parent="." index="2"]

position = Vector2( 100, 417 )

[node name="CardsEnd" type="Position2D" parent="." index="3"]

position = Vector2( 857, 434 )

[node name="Play" type="Position2D" parent="." index="4"]

position = Vector2( 242, 291 )

[node name="Node2D3" parent="." index="5" instance=ExtResource( 4 )]

position = Vector2( 819, 112 )

[node name="Node2D4" parent="." index="6" instance=ExtResource( 5 )]

position = Vector2( 227, 107 )

[node name="Node2D" parent="." index="7" instance=ExtResource( 6 )]

position = Vector2( 404, 107 )

[node name="TextureProgress" type="TextureProgress" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 218.0
margin_top = 251.0
margin_right = 538.0
margin_bottom = 261.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = false
texture_under = ExtResource( 7 )
texture_over = null
texture_progress = ExtResource( 8 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Rect", "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="TextureProgress" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -3.0
margin_right = 320.0
margin_bottom = 11.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 9 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Grow Direction", "Rect", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Button" parent="." index="9" instance=ExtResource( 10 )]

position = Vector2( 765, 222 )
text = "END TURN"

[node name="Warning" type="Label" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 300.0
margin_top = 217.0
margin_right = 460.0
margin_bottom = 231.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 0, 0, 0 )
text = "TEST WARNING"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="Warning" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Warning" index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fade_out = SubResource( 1 )
anims/invisible = SubResource( 2 )
anims/visible = SubResource( 3 )
blend_times = [  ]

[node name="Mana" type="Label" parent="." index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 177.0
margin_top = 223.0
margin_right = 184.0
margin_bottom = 234.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 9 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors" ]
__meta__ = {
"_edit_lock_": true
}

[node name="MaxMana" type="Label" parent="." index="12"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 194.0
margin_top = 242.0
margin_right = 201.0
margin_bottom = 253.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 9 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Block" type="Label" parent="." index="13"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 701.0
margin_top = 230.0
margin_right = 722.0
margin_bottom = 241.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 9 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Insect" parent="." index="14" instance=ExtResource( 11 )]

position = Vector2( 596, 130 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="timeout" from="Warning/Timer" to="." method="_on_Timer_timeout"]


